--- a/CodeGeneration/CodeGeneration.csproj
+++ b/CodeGeneration/CodeGeneration.csproj
@@ -65,6 +65,10 @@
       <DependentUpon>GenerationButton.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="SettingsProjectTabItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
