--- a/CodeGeneration/CodeGeneration.csproj
+++ b/CodeGeneration/CodeGeneration.csproj
@@ -48,10 +48,8 @@
     <Compile Include="Enums\VariableTypes.cs" />
     <Compile Include="InternalClasses\CGBlock.cs" />
     <Compile Include="InternalClasses\CGGraph.cs" />
-    <Compile Include="InternalClasses\VariableTypesGridViewItem.cs" />
-    <Compile Include="SettingsProjectTabItem.xaml.cs">
-      <DependentUpon>SettingsProjectTabItem.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="InternalClasses\CGViewModel.cs" />
+    <Compile Include="InternalClasses\Variable.cs" />
     <Page Include="CodeGenerationSettings.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -68,10 +66,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Resources.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SettingsProjectTabItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
