--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ImplementationPlanTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CoreTest.cs" />
+    <Compile Include="QDeterminantTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
