--- a/ImplementationPlan/ImplementationPlan.csproj
+++ b/ImplementationPlan/ImplementationPlan.csproj
@@ -34,12 +34,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AvoidDuplicationTypes.cs" />
-    <Compile Include="FunctionSignature.cs" />
-    <Compile Include="Optimization.cs" />
+    <Compile Include="InternalClasses\FunctionSignature.cs" />
+    <Compile Include="InternalClasses\LexemAnalyze.cs" />
+    <Compile Include="InternalClasses\GraphBuilder.cs" />
     <Compile Include="Plan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReversePolishNotation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
