Отображение характеристик алгоритма

--- a/ImplementationPlanViewer/ImplementationPlanViewer.csproj
+++ b/ImplementationPlanViewer/ImplementationPlanViewer.csproj
@@ -59,6 +59,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="PropertyGrid.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Viewer.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -70,6 +74,7 @@
     <Compile Include="InternalClasses\LocalConverters\BlockSelectedToColorConverter.cs" />
     <Compile Include="InternalClasses\LocalConverters\CountCPUToWidthConverter.cs" />
     <Compile Include="InternalClasses\LocalConverters\LevelToHeihtConverter.cs" />
+    <Compile Include="InternalClasses\PropertyGridVM.cs" />
     <Compile Include="InternalClasses\ViewerVM.cs" />
     <Compile Include="InternalClasses\VisualBlockVM.cs" />
     <Compile Include="InternalClasses\VisualLinkVM.cs" />
@@ -82,6 +87,9 @@
     </Compile>
     <Compile Include="PluginToolbar.xaml.cs">
       <DependentUpon>PluginToolbar.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PropertyGrid.xaml.cs">
+      <DependentUpon>PropertyGrid.xaml</DependentUpon>
     </Compile>
     <Compile Include="Viewer.xaml.cs">
       <DependentUpon>Viewer.xaml</DependentUpon>
