--- a/UnInstaller/App.config
+++ b/UnInstaller/App.config
@@ -13,6 +13,9 @@
             <setting name="Site" serializeAs="String">
                 <value>http://qdet.kingmidas.ru</value>
             </setting>
+            <setting name="ProgramName" serializeAs="String">
+                <value>QStudio</value>
+            </setting>
         </UnInstaller.Properties.Settings>
     </applicationSettings>
 </configuration>
