--- a/UnInstaller/Properties/Settings.settings
+++ b/UnInstaller/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Site" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://qdet.kingmidas.ru</Value>
     </Setting>
+    <Setting Name="ProgramName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">QStudio</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
